--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -16,6 +16,6 @@
     <%= f.label :郵便番号 %><br />
     <%= f.text_field :postal_code, autofocus: true %>
   </div>
-  <div><%= f.submit 'Update address' %></div>
+  <div class="botan"><%= f.submit '編集完了' %></div>
   <% end %>
 </div>
