--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -13,7 +13,7 @@
     <div class="row mt-5">
       <div class="offset-1 col-9">
         <table class="hyou">
-          <thead>
+          <thead align="center">
             <tr class="red-border">
               <th>商品名</th>
               <th>単価(税込)</th>
