--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -2,11 +2,11 @@
 <div class="container takasa">
   <div class="row">
       <tbody class="about" align="center">
-   <h3>ながのCAKEは全国発送可能なケーキ屋さんです</h3>
-   <h3>お子様からお年寄りの方までお召し上がりいただけるよう、</h3>
-   <h3>さまざまなバリエーションをご用意しております。</h3>
-   <h3>また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。</h3>
-   <h3>ぜひご注文ください</h3>
+   <h2 class = "top">ながのCAKEは全国発送可能なケーキ屋さんです<br>
+   お子様からお年寄りの方までお召し上がりいただけるよう、<br>
+   さまざまなバリエーションをご用意しております。<br>
+   また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。。
+   ぜひご注文ください</h2>
    </tbody>
   <div class="col-xs-3 sidebar">
       
