--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
            <% end %>
 
            <% elsif customer_signed_in? %>
-             <span class="">ようこそ、<%= current_customer.last_name %>さん！</span>
+             <span class="name"><h4>ようこそ、<%= current_customer.last_name %>さん！</h4></span>
 
             <%= link_to public_customer_path(current_customer) do %>
              <span class="fas fa-user ">マイページ</span>
