--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -40,7 +40,8 @@
         </div>
          <div class="row justify-content-center mt-5">
           <div class="col-sm-3">
-            <%= f.submit :変更を保存, class: "btn btn-success" %><button type="button" class="btn btn-danger"><%= link_to "退会", public_confirm_unsubscribe_path(current_customer) %></button>
+            <%= f.submit :変更を保存, class: "btn btn-success" %>
+            <%= link_to "退会", public_confirm_unsubscribe_path(current_customer),class: "btn btn-sm btn-danger" %>
           </div>
         </div>
       </div>
