--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -14,21 +14,21 @@
 
   <b>お届け先</b>
 
-  <br><%= form.radio_button :customer_address, 0 %>
-  <%= form.label :customer_address,"ご自身の住所" %>
+  <br><%= form.radio_button :address, 0 %>
+  <%= form.label :address,"ご自身の住所" %>
   <br>
    &#12306;<%= "#{current_customer.postal_code} #{current_customer.address}" %><br>
   <%= "#{current_customer.last_name} #{current_customer.first_name}" %>
 
-  <br><%= form.radio_button :customer_address, 1 %>
-  <%= form.label :customer_address,"登録済み住所から選択" %>
+  <br><%= form.radio_button :address, 1 %>
+  <%= form.label :address,"登録済み住所から選択" %>
   <br>
   <!--配送先をマージ後試す-->
  <%#= form.collection_select(:where, @addresses, :id, :place) %>
 
 
-  <br><%= form.radio_button :customer_address, 2 %>
-  <%= form.label :customer_address,"新しいお届け先" %>
+  <br><%= form.radio_button :address, 2 %>
+  <%= form.label :address,"新しいお届け先" %>
   <br>
   郵便番号(ハイフンなし)<%= form.text_field :postal_code, placeholder: "0000000", class:"mb-1" %><br>
   住所<%= form.text_field :address, placeholder: "東京都渋谷区代々木神園町0-0", class:"mb-1" %><br>
